@@ -699,22 +699,12 @@ function template() {
 	$i = 0;
 	if (sizeof($template_list) > 0) {
 		foreach ($template_list as $template) {
-			form_alternate_row_color($colors["alternate"],$colors["light"],$i);
-				?>
-				<td>
-					<a class="linkEditMain" href="data_templates.php?action=template_edit&id=<?php print $template["id"];?>"><?php print eregi_replace("(" . preg_quote($_REQUEST["filter"]) . ")", "<span style='background-color: #F8D93D;'>\\1</span>", $template["name"]);?></a>
-				</td>
-				<td>
-					<?php print (empty($template["data_input_method"]) ? "<em>None</em>": $template["data_input_method"]);?>
-				</td>
-				<td>
-					<?php if ($template["active"] == "on") print "Active"; else print "Disabled";?>
-				</td>
-				<td style="<?php print get_checkbox_style();?>" width="1%" align="right">
-					<input type='checkbox' style='margin: 0px;' name='chk_<?php print $template["id"];?>' title="<?php print $template["name"];?>">
-				</td>
-			</tr>
-			<?php
+			form_alternate_row_color($colors["alternate"],$colors["light"],$i,$template["id"]);
+			form_selectable_cell("<a class='linkEditMain' href='data_templates.php?action=template_edit&id=" . $template["id"] . "'>" . eregi_replace("(" . preg_quote($_REQUEST["filter"]) . ")", "<span style='background-color: #F8D93D;'>\\1</span>", $template["name"]) . "</a>", $template["id"]);
+			form_selectable_cell((empty($template["data_input_method"]) ? "<em>None</em>": $template["data_input_method"]), $template["id"]);
+			form_selectable_cell((($template["active"] == "on") ? "Active" : "Disabled"), $template["id"]);
+			form_checkbox_cell($template["name"], $template["id"]);
+			form_end_row();
 			$i++;
 		}
 
