@@ -62,6 +62,7 @@ Cacti CHANGELOG
 -feature: include/config_* have been renamed to include/global_*. Note: Script servers need to be updated.
 -feature: Allow VRULE's in Cacti to specify an absolute timestamp in addition to [+/-]HH:MM
 -feature: Add 1 minute RRA and graph templates
+-feature: Add item select hilighting to main pages
 
 0.8.6j
 -bug#0000842: SNMPv3 password field does not check if entered passwords match.
